// Vitest Snapshot v1

exports[`SignUp > matches snapshot in en 1`] = `
<div
  class="signup"
>
  <h1>
    Register
  </h1>
  <!--v-if-->
  
  
  <form
    class="form auth-form"
    novalidate=""
  >
    <div
      class="field email"
    >
      <label
        for="email"
      >
        Your email
      </label>
      <input
        name="email"
        placeholder="john.doe.at.example.com"
        type="email"
      />
      <!---->
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Your password
      </label>
      <input
        name="password"
        type="password"
      />
      <!---->
    </div>
    <div
      class="field confirm-password"
    >
      <label
        for="confirmation"
      >
        Confirm your password
      </label>
      <input
        class="field"
        name="confirmation"
        type="password"
      />
      <!---->
    </div>
    <div
      class="actions"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Create my account
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  <div
    class="links"
  >
    <a
      class="login"
    >
      Login
    </a>
    <a
      class="reset"
    >
      Forgot password
    </a>
  </div>
</div>
`;

exports[`SignUp > matches snapshot in fr 1`] = `
<div
  class="signup"
>
  <h1>
    Inscription
  </h1>
  <!--v-if-->
  
  
  <form
    class="form auth-form"
    novalidate=""
  >
    <div
      class="field email"
    >
      <label
        for="email"
      >
        Votre adresse e-mail
      </label>
      <input
        name="email"
        placeholder="john.doe.at.example.com"
        type="email"
      />
      <!---->
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Votre mot de passe
      </label>
      <input
        name="password"
        type="password"
      />
      <!---->
    </div>
    <div
      class="field confirm-password"
    >
      <label
        for="confirmation"
      >
        Confirmez votre mot de passe
      </label>
      <input
        class="field"
        name="confirmation"
        type="password"
      />
      <!---->
    </div>
    <div
      class="actions"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            M'inscrire
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  <div
    class="links"
  >
    <a
      class="login"
    >
      Connexion
    </a>
    <a
      class="reset"
    >
      Mot de passe oublié
    </a>
  </div>
</div>
`;
